--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(de)CODIFIQUE</title>
+    <title>(de)CODIFIQUE_</title>
 
     <link rel="stylesheet" href="./styles/reset.css">
 
@@ -71,8 +71,8 @@
         <h3>Marino Mouzinho</h3>
         <p>👨‍💻 <span>Técnico em Informática | Redes sociais</span> ⬇</p>
         <div class="redes-sociais">
-            <a href=""><img src="https://img.icons8.com/ios-glyphs/30/ffffff/github.png" alt="github"></a>
-            <a href=""><img src="https://img.icons8.com/ios-filled/30/ffffff/linkedin-circled--v1.png" alt="linkedin"></a>
+            <a href="https://github.com/AquaMouzinho"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/marino-paulino-dev"><img src="https://img.icons8.com/ios-filled/30/ffffff/linkedin-circled--v1.png" alt="linkedin"></a>
         </div>
     </footer>
     <script src="./scripts/script.js"></script>
