:truck: chore: Alterações no HTML
Remoção de subtitulo no footer e alteração no <p>

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 
     </main>
     <footer>
-        <p><span>Criado por:</span></p>
+        <p>Criado por:</p>
         <h3>Marino Mouzinho</h3>
-        <p>👨‍💻 <span>Técnico em Informática | Redes sociais</span> ⬇</p>
         <div class="redes-sociais">
             <a href="https://github.com/AquaMouzinho"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/github.png" alt="github"></a>
             <a href="https://www.linkedin.com/in/marino-paulino-dev"><img src="https://img.icons8.com/ios-filled/30/ffffff/linkedin-circled--v1.png" alt="linkedin"></a>
